# flaskr-sqla-demo

./: README.md  pyproject.toml  requirements.txt  run.py
flaskr/: __init__.py  auth.py  blog.py  config.py  extensions.py
flaskr/models/: association_tables.py  comment.py  post.py  tag.py  user.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/blog/: create.html  index.html  update.html
migrations/versions/: 3c8d3137eacf_fk_post_author_id_and_ondelete_post_.py  81b2a74aec53_tag_name_unique.py  c44201f272ff_initial_migration.py
tests/: conftest.py  test_auth.py  test_blog.py  test_factory.py
